2006-09-24  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/script-fu/scripts/line-nova.scm: Change min for randomness
	from 0 to 1, should fix bug #357433.
	
2006-09-24  Michael Natterer  <mitch@gimp.org>

	Some more proper typing instead of using pointers:

	* libgimpconfig/gimpconfig-params.h: added macro
	GIMP_CONFIG_INSTALL_PROP_BOXED().

	* app/core/gimpcontainer.c: made "children-type" a GParamSpecGType.

	* app/widgets/gimpcontrollerinfo.c: made "mapping" a
	GParamSpecBoxed and use g_hash_table_unref() instead of destroy().

	* app/widgets/gimppdbdialog.c: made "select-type" a GParamSpecGType.

	* app/dialogs/module-dialog.c
	* app/widgets/gimpcolordisplayeditor.c
	* app/widgets/gimpcontrollerlist.c
	* app/widgets/gimpfileprocview.c
	* app/widgets/gimppluginaction.c: use proper object types, boxed
	types and G_TYPE_GTYPE instead of G_TYPE_POINTER for various list
	stores and signal signatues.

2006-09-24  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpimagemap.c (gimp_image_map_apply): don't restore
	the entire affected area of the drawable here (it can take *long*
	on large selections).

	(gimp_image_map_do): do it here instead, as we idle-process the
	chunks. Slightly reduces overall speed but improves responsiveness
	*massively*

	(gimp_image_map_get_color_at): fixed to honor undo tiles offset
	and be readable.

	(gimp_image_map_commit)
	(gimp_image_map_clear)
	(gimp_image_map_clear): don't unref the image_map here. Objects
	don't memory manage themselves.

	Cleaned up the entire file and got rid of all sorts of uglyness.

	* app/tools/gimpimagemaptool.c: unref the image_map here.

	* app/tools/gimpcurvestool.c (curves_graph_events): update the
	preview on button_press when we are dragging a free curve.

2006-09-24  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpcurvestool.c (curves_graph_events): jikes, update
	the preview only if we actually drag the curve, not on any mouse
	movement.
